# wb_parser

./: .gitignore  README.md  pyproject.toml
tests/: test_wb_parser.py
tests/fixtures/: test_wb_parser.json
wb_parser/: cli.py  main.py  parser.py
