[tool.poetry]
name = "wb_parser"
version = "0.1.0"
description = ""
authors = ["Cyberego <cy8erego@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8.2"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
user_agent = "^0.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
